--- a/learning-html-page.html
+++ b/learning-html-page.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Learning html</title>
+    <title>HTML Tutorial</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <style>
@@ -13,15 +13,56 @@ background-size:100%
 }
 
 h1 {
-color:powderblue;
+color:white;
 font-family:verdana;
 font-size:150%;
 }
 
 p {
-color:slateblue;
-font-family:calibri;
+color:white;
+font-family:verdana;
 font-size:125%;
+}
+
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333333;
+}
+
+li {
+  float: left;
+}
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 16px;
+  text-decoration: none;
+}
+
+li a:hover {
+  background-color: #111111;
+}
+
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+td, th {
+  border: 1px solid black;
+  text-align: left;
+  padding: 8px;
+  background-color: #dddddd;
+}
+
+tr:nth-child(even) {
+  background-color: powderblue;
 }
 
 
@@ -29,11 +70,39 @@ font-size:125%;
 
 <body>
 
-<h1 id=W>Hello World</h1>
-<p>This is colorful, I like it!</p>
-<img src="tree.gif" alt="Workplace" usemap="#workmap">
-<map name="workmap">
-<area shape="rect" coords="100, 50, 350, 200" href="https://www.kingdomthegame.com">
+    <div style="background-color:CadetBlue;color:white;padding:30px;"> 
+    <h1 id=W>Kingdom:The Trilogy</h1>
+
+    <ul>
+      <li><a href="https://www.kingdomthegame.com/kingdom-eighties">Kingdom Eighties</a></li>
+      <li><a href="https://www.kingdomthegame.com/kingdom-two-crowns">Kingdom Two Crowns</a></li>
+      <li><a href="https://www.kingdomthegame.com/kingdom-new-lands">Kingdom New Lands</a></li>
+      <li><a href="https://www.kingdomthegame.com/kingdom-classic">Kingdom Classic</a></li>
+    </ul>
+	</div>
+    
+	<div style="background-color:#333333;color:white;padding:30px;"> 
+    <p><b>Build, Conquer, Survive.</b></p>
+    <img src="tree.gif" alt="Workplace" usemap="#workmap">
+    <map name="workmap">
+    <area shape="rect" coords="100, 50, 350, 200" href="https://www.kingdomthegame.com">
+
+    <table style="width:100%">
+      <caption>Monthly sales</caption>
+      <tr>
+        <th>Month</th>
+        <th>Sales</th>
+      </tr>
+      <tr>
+        <td>January</td>
+        <td>1.2m</td>
+      </tr>
+      <tr>
+        <td>February</td>
+        <td>2m</td>
+      </tr>
+    </table>
+	</div>
 
 </body>
 </html>
