--- a/learning-html-page.html
+++ b/learning-html-page.html
@@ -4,6 +4,23 @@
 <head>
     <title>HTML Tutorial</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
+	<link rel="stylesheet" href="mystyle.css">
+	<meta charset="UTF-8">
+	<meta name="keywords" content="HTML, CSS, JavaScript">
+	<meta name="description" content="Free Web tutorials">
+	<meta name="author" content="John Doe">
+	<meta http-equiv="refresh" content="30">
+	<!--- This is important, use in all pages so phone users see the page correctly. -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	
+	  <script>
+  function myFunction2() {
+    document.getElementById("demo5").innerHTML = "Hello JavaScript!";
+  }
+  </script>
+  
+   <base href="file:///D:/Luca-Iacob/learn-html/learning-html-page.html" target="_blank">
+	
 </head>
 <style>
 body {
@@ -65,6 +82,104 @@ tr:nth-child(even) {
   background-color: powderblue;
 }
 
+.city {
+  background-color: CadetBlue;
+  color: white;
+  border: 2px solid black;
+  margin: 20px;
+  padding: 20px;
+}
+
+.note {
+  font-size: 120%;
+  color: red;
+}
+
+#myHeader {
+  background-color: gold;
+  color: white;
+  padding: 40px;
+  text-align: center;
+  font-family:verdana;
+ }
+ 
+/* Style the element with the id "myHeader" */
+#myHeader {
+  background-color: gold;
+  color: black;
+  padding: 40px;
+  text-align: center;
+}
+
+/* Style all elements with the class name "city" */
+.city {
+  background-color: orange;
+  color: white;
+  padding: 10px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+/* Style the header */
+header {
+  background-color: #333333;
+  padding: 30px;
+  text-align: center;
+  font-size: 35px;
+  color: white;
+}
+
+/* Create two columns/boxes that floats next to each other */
+nav {
+  float: left;
+  width: 30%;
+  height: 300px; /* only for demonstration, should be removed */
+  background: #ccc;
+  padding: 20px;
+}
+
+/* Style the list inside the menu */
+nav ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+article {
+  float: left;
+  padding: 20px;
+  width: 70%;
+  background-color: cadetblue;
+  height: 300px; /* only for demonstration, should be removed */
+}
+
+/* Clear floats after the columns */
+section::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+/* Style the footer */
+footer {
+  background-color: #333333;
+  padding: 10px;
+  text-align: center;
+  color: white;
+}
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
+}
 
 </style>
 
@@ -86,6 +201,9 @@ tr:nth-child(even) {
     <img src="tree.gif" alt="Workplace" usemap="#workmap">
     <map name="workmap">
     <area shape="rect" coords="100, 50, 350, 200" href="https://www.kingdomthegame.com">
+	
+	<a href="#C4">Jump to the start of everything.</a>
+	<a href="html_demo.html#C4">Jump to Chapter 4</a>
 
     <table style="width:100%">
       <caption>Monthly sales</caption>
@@ -103,6 +221,175 @@ tr:nth-child(even) {
       </tr>
     </table>
 	</div>
+
+<div class="city">
+  <h2>Eighties</h2>
+  <p>Latest installment.</p>
+</div>
+
+<div class="city">
+  <h2>Two Crowns</h2>
+  <p>Continuation of the monarch series.</p>
+</div>
+
+<div class="city">
+  <h2>New Lands</h2>
+  <p>Revolutionized the saga.</p>
+</div>
+
+<h1>The <span class="note">Kingdom</span> Making Process</h1>
+<p>This is the process of creating <span class="note">The Kingdom</span> series.</p>
+
+<h2 class="city main">Kingdom Eighties</h2>
+<h2 class="city">Kingdom Two Crown</h2>
+<h2 class="city">Kingdom New Lands</h2>
+
+<h2>Use of The class Attribute in JavaScript</h2>
+<p>Click the button to hide all elements with class name "city":</p>
+
+<button onclick="myFunction()">Hide elements</button>
+
+<h2 class="city">Eighties</h2>
+<p>Latest installment.</p>
+
+<h2 class="city">Two Crowns</h2>
+<p>Continuation of the monarch series.</p>
+
+<h2 class="city">New Lands</h2>
+<p>Revolutionized the saga.</p>
+
+<script>
+function myFunction() {
+  var x = document.getElementsByClassName("city");
+  for (var i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+}
+</script>
+
+<h1 id="myHeader">Kingdom Two Crowns</h1>
+
+<!-- An element with a unique id -->
+<h1 id="myHeader">Mounts</h1>
+
+<!-- Multiple elements with same class -->
+<h2 class="city">Stag</h2>
+<p>Fast, reliable.</p>
+
+<h2 class="city">Griffin</h2>
+<p>Overall the best.</p>
+
+<h2 class="city">Lizard</h2>
+<p>Slow but powerful.</p>
+
+<h2 id="C4">Kingdom:The Start Of A Saga</h2>
+
+<h1 id="kingdomheader">Kingdom, Survive.</h1>
+<button onclick="displayResult()">Change text</button>
+
+<script>
+function displayResult() {
+  document.getElementById("kingdomheader").innerHTML = "Kingdom, Hold Your Crown.";
+}
+</script>
+
+<iframe src="https://www.kingdomthegame.com/" title="Kingdom Eighties"></iframe>
+<iframe src="https://www.kingdomthegame.com/kingdom-two-crowns" height="200" width="300" title="Kingdom Two Crowns"></iframe>
+<iframe src="https://www.kingdomthegame.com/kingdom-new-lands" style="height:200px;width:300px;" title="Kingdom New Lands"></iframe>
+<iframe src="https://www.kingdomthegame.com/kingdom-classic" style="border:none;" title="Kingdom Classic"></iframe>
+<iframe src="https://www.kingdomthegame.com/history" style="border:2px solid red;" title="History"></iframe>
+<iframe src="demo_iframe.htm" name="iframe_a" height="300px" width="100%" title="Buy"></iframe>
+
+<p><a href="https://www.kingdomthegame.com/play" target="iframe_a">Play</a></p>
+
+<p id="demo"></p>
+<script>
+document.getElementById("demo").innerHTML = Click me to display Date and Time.";
+</script>
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = Date()">
+Click me to display Date and Time.</button>
+<p id="demo2"></p>
+<script>
+document.getElementById("demo2").innerHTML = "Hello JavaScript!";
+</script>
+<script>
+function myFunction() { 
+  document.getElementById("demo3").innerHTML = "Kingdom Eighties";
+}
+</script>
+<button type="button" onclick="myFunction()">Click to show the name of the new game.</button>
+<p id="demo3">The latest installment is...</p>
+<script>
+document.getElementById("demo").style.fontSize = "20px";
+document.getElementById("demo").style.fontFamily = "Verdana";
+document.getElementById("demo").style.color = "white";
+document.getElementById("demo").style.backgroundColor = "gold";
+</script>
+<script>
+function light(sw) {
+  var pic;
+  if (sw == 0) {
+    pic = "tree.gif"
+  } else {
+    pic = "imagepage.jph"
+  }
+  document.getElementById('myImage').src = pic;
+}
+</script>
+
+<img id="myImage" src="pic_bulboff.gif" width="100" height="180">
+
+<p>
+<button type="button" onclick="light(1)">Monarch</button>
+<button type="button" onclick="light(0)">Tree</button>
+</p>
+<p id="demo4"></p>
+<script>
+document.getElementById("demo4").innerHTML = "Hello JavaScript!";
+</script>
+<noscript>Sorry, your browser does not support JavaScript!</noscript>
+
+<h2 style="background-color:CadetBlue;color:white;padding:30px;">Using a Full URL File Path</h2>
+<img src="https://images.squarespace-cdn.com/content/v1/56b328fff699bbab113ee671/1587720471819-6ZN63DW8IYPXAS3FSE6S/KTC-Product-page_squarespace_header.png?format=2500w" alt="Monsters" style="width:700px">
+<h2 style="background-color:CadetBlue;color:white;padding:30px;">Using a Relative File Path</h2>
+<img src="/learn-html/imagepage.jpg" alt="Tree" style="width:700px">
+<h2 style="background-color:CadetBlue;color:white;padding:30px;">Using a Relative File Path</h2>
+<img src="learn-html/imagepage.jpg" alt="Tree" style="width:700px">
+<h2 style="background-color:CadetBlue;color:white;padding:30px;">Using a Relative File Path</h2>
+<img src="../learn-html/tree.gif" alt="Tree" style="width:700px">
+
+<h1>My Web Page</h1>
+<p id="demo5">A Paragraph</p>
+<button type="button" onclick="myFunction2()">Try it</button>
+<h1>The base element</h1>
+<p><img src="images/stickman.gif" width="24" height="39" alt="Stickman"> - Notice that we have only specified a relative address for the image. Since we have specified a base URL in the head section, the browser will look for the image at "https://www.w3schools.com/images/stickman.gif".</p>
+<p><a href="tags/tag_base.asp">HTML base tag</a> - Notice that the link opens in a new window, even if it has no target="_blank" attribute. This is because the target attribute of the base element is set to "_blank".</p>
+
+<header>
+  <h2>Games</h2>
+</header>
+
+<section>
+  <nav>
+    <ul>
+      <li><a href="https://www.kingdomthegame.com/kingdom-eighties">Kingdom Eighties</a></li>
+      <li><a href="https://www.kingdomthegame.com/kingdom-two-crowns">Kingdom Two Crowns</a></li>
+      <li><a href="https://www.kingdomthegame.com/kingdom-new-lands">Kingdom New Lands</a></li>
+      <li><a href="https://www.kingdomthegame.com/kingdom-classic">Kingdom Classic</a></li>
+    </ul>
+  </nav>
+  
+  <article>
+    <h1>Kingdom Two Crowns</h1>
+    <p>The Best Kingdom Game</p>
+    <p>Most amount of content with it being very fun.</p>
+  </article>
+</section>
+
+<footer>
+  <p>Build, Conquer, Survive.</p>
+</footer>
 
 </body>
 </html>
